syntax = "proto3";
package BBSerializer;

import "BBVector.proto";

message BBGameObject
{
	optional string name = 1;
	optional string className = 2;
	optional string filePath = 3;

	optional BBVector3f position = 4;
    optional BBVector3f localPosition = 5;
    optional BBVector3f rotation = 6;
    optional BBVector3f localRotation = 7;
    optional BBVector3f scale = 8;
    optional BBVector3f localScale = 9;
}